# ai-engineering-fordham

./: 5.you-can-just-build-things.ipynb  README.md  homework-2.ipynb  homework-6.ipynb  main.py  pyproject.toml
