[project]
name = "ai-engineering-fordham-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "litellm>=1.81.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pystemmer>=3.0.0",
    "python-dotenv>=1.2.1",
]
